--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,9 @@
   </head>
   <body>
     <div id="root">
-      <h1>Hello world!</h1>
+      <h1>Hello world!
+        Olá, Mundo!
+      </h1>
     </div>
     <script src="index.js" type="module"></script>
   </body>
