--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,21 @@
   </head>
   <body>
     <div id="root">
-      <h1>Hello world!
-        Olá, Mundo!
-      </h1>
+      <header>
+        <h1> VALIDAÇÃO DE CARTÃO
+        </h1>
+      </header>
+    </div>
+    <div class="first"> </div>
+      <div class="validator">
+      </div>
+    
+      <div class="img">
+      <img src="cards.jpg"> 
+      </div>
+    
+    <div class="text">
+
     </div>
     <script src="index.js" type="module"></script>
   </body>
