Function para receber input

--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,9 @@
         
         <div class="validator">
           <label for="cardnumber" class="cardnumberlabel">Insira o número do cartão:</label>
-          <input type="number" id="cardnumber" name="cardnumber" class="cardnumber" placeholder="xxxxxxxxxxxxxxxxxxx" required
+          <input type="number" id="cardnumber" name="cardnumber" class="cardnumber" placeholder="xxxxxxxxxxxxxxxxxxx"
             minlength="13" maxlength="19" size="17"> <br>
-          <button type="submit" id="button1" class="button1" onclick="getcardnumber(1)">Checar</button>
+          <button type="submit" id="button1" class="button1">Checar</button>
             <p> </p> <br>
             <small> *O número deve ser escrito sem espaços ou pontuação.</small>
         </div>
