--- a/index.html
+++ b/index.html
@@ -9,39 +9,45 @@
 </head>
 
 <body>
-  <div id="root">
-    <header>
-      <img class="logo" src="img/logob.png">
-      <h1> CARTO BANK
-      </h1>
-    </header>
-    <main>
-  </div>
-  <div class="first">
+  <header>
+    <img class="logo" src="img/logob.png">
+    <h1> CARTO BANK
+    </h1>
+  </header>
+  <main>
+    <div class="first">
+      <img class="first imgg" src="./img/fundoverde.png">
 
-    <div class="validator div">
+      <div class="validator div">
+        <section>
+          <label for="cardnumber" class="cardnumberlabel">Insira o número do cartão:</label>
+          <input type="text" id="cardnumber" name="cardnumber" class="cardnumber" placeholder="Seu número de cartão."
+            required minlength="13" maxlength="16" size="17"><!--onkeypress="return press(event)"-->
+          <p id="span" class="span"></p>
+          <button type="submit" id="button1" value="cardnumber" class="button1">CHECAR</button>
+          <br><small> O número deve ser escrito sem espaços ou pontuação.</small>
+        </section>
+      </div>
 
-      <label for="cardnumber" class="cardnumberlabel">Insira o número do cartão:</label>
-      <input type="text" id="cardnumber" name="cardnumber" class="cardnumber" placeholder="Seu número de cartão." required
-        minlength="13" maxlength="16" size="17"><!--onkeypress="return press(event)"-->
-      <p id="span" class="span"></p> 
-      <button type="submit" id="button1" value="cardnumber" class="button1">CHECAR</button>
-      <br><small> O número deve ser escrito sem espaços ou pontuação.</small>
-      
+      <div class="read div">
+        <section>
+          <article>
+            <h2>Recebi meu cartão e agora?</h2>
+            <br>
+            <p>Agora que já está logado em sua conta basta inserir o número do cartão.
+              Após checarmos o número iremos continuar o procedimento.</p>
+            <br>
+            <p>Não precisa sair de casa ou muito menos perder tempo no telefone para desbloquear!
+              Continue seguindo os passos e no final digite sua senha eletrônica de novo!</p>
+          </article>    
+        </section>
+      </div>
+
     </div>
-    <div class="read div">
-      <h2>Recebi meu cartão e agora?</h2>
-      <br>
-      <p>Agora que já está logado em sua conta basta inserir o número do cartão.
-        Após checarmos o número iremos continuar o procedimento.</p>
-      <br>
-      <p>Não precisa sair de casa ou muito menos perder tempo no telefone para desbloquear!
-        Continue seguindo os passos e no final digite sua senha eletrônica de novo!</p>
-    </div>
 
-  </div>
-  <div class="text" id="result">
-  </div>
+    <div class="result" id="result">
+      <button type="click" class="button2">Nova consulta</button>
+    </div>
 
   </main>
 
